<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeLayoutid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/pb_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/noserver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/downserver"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rlheader"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/backIndex"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:padding="2dp"
                android:src="@drawable/back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal">

                <com.like.LikeButton
                    android:id="@+id/favid"
                    android:layout_width="45dp"
                    android:layout_height="35dp"
                    app:icon_type="star"
                    app:liked="true" />

                <TextView
                    android:id="@+id/appnamid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/favorite"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvfavoritelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlheader"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/lyempty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rlheader"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/empty" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/emptyfav"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addfavid"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/addfav"
                android:textColor="@color/bluemore"
                android:textSize="17sp"
                android:textStyle="italic" />

        </LinearLayout>
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>