<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginVertical="4dp"
    android:padding="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/namefav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/savetofav"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnYes"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:text="@string/btnYes" />

            <Button
                android:id="@+id/btnNo"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:text="@string/btnNo" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
