<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/idswipeLayout"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/pb_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/noserver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/downserver"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rlheader"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@+id/appnamid"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/appnamid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.like.LikeButton
                android:id="@+id/star_button"
                android:layout_width="45dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                app:icon_type="star"
                app:liked="true" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlheader" />

        <LinearLayout
            android:id="@+id/lynetwork"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rlheader"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/idnowifi"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/nowifi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/no_network"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>